proc-macros/tests/ui/incorrect/sub/sub_unsupported_field.rs
use jsonrpsee::proc_macros::rpc;

// Unsupported attribute field.
#[rpc(client, server)]
pub trait UnsupportedField {
	#[subscription(name = "sub", unsubscribe = "unsub", item = u8, magic = true)]
	async fn sub(&self) -> SubscriptionResult;
}

fn main() {}
